--- a/angular.json
+++ b/angular.json
@@ -66,7 +66,8 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "clouds10register:build"
+            "browserTarget": "clouds10register:build",
+            "port": 4209
           },
           "configurations": {
             "production": {
