--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "~9.1.9",
     "@angular/platform-browser-dynamic": "~9.1.9",
     "@angular/router": "~9.1.9",
+    "moment": "^2.29.1",
     "ngx-mask": "^10.0.4",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
