--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "~9.1.9",
     "moment": "^2.29.1",
     "ngx-mask": "^10.0.4",
+    "roboto-fontface": "^0.10.0",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
